--- a/.github/workflows/stage.yml
+++ b/.github/workflows/stage.yml
@@ -33,6 +33,8 @@ jobs:
 
       - name: Perform release
         uses: qcastel/github-actions-maven-release@master
+        env:
+          JAVA_HOME: /usr/lib/jvm/java-11-openjdk/
         with: 
           ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
           version-major: ${{ inputs.releaseType == 'major' }}
