--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -30,7 +30,7 @@ jobs:
       - name: Upload release to GitHub Releases
         uses: softprops/action-gh-release@v1
         with: 
-          tag_name: ${{ steps.get_version.outputs.version }}
+          tag_name: v${{ steps.get_version.outputs.version }}
           name: Release version ${{ steps.get_version.outputs.version }}
           body: "**Changes:**"
           files: ./target/*-${{ steps.get_version.outputs.version }}.jar
