ci: update publish trigger to run when stage succeeds

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,9 +1,10 @@
 name: Publish release
 
 on:
-  push:
-    tags:        
-      - "v*.*.*"
+  workflow_run:
+    workflows: ["Stage release"]
+    types:
+      - completed
 
 jobs:
   create-release:
