ci: set username and email to try and circumvent workflow run being ignored

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,10 +1,9 @@
 name: Publish release
 
 on:
-  workflow_run:
-    workflows: ["Stage release"]
-    types:
-      - completed
+  push:
+    tags:        
+      - "v*.*.*"
 
 jobs:
   create-release:
