--- a/.github/workflows/stage.yml
+++ b/.github/workflows/stage.yml
@@ -4,14 +4,13 @@ on:
   workflow_dispatch:
     inputs:
       releaseType:
-        description: 'Release type'
+        description: 'Bump version by segment:'
         required: true
-        default: 'patch'
+        default: 'minor'
         type: choice
         options:
           - 'major'
           - 'minor'
-          - 'patch'
       skipPerform:
         description: 'Skip release perform'
         required: false
@@ -38,9 +37,10 @@ jobs:
         env:
           JAVA_HOME: /usr/lib/jvm/java-11-openjdk/
         with: 
+          git-release-bot-name: "thedatasnok"
+          git-release-bot-email: "47036430+thedatasnok@users.noreply.github.com"
           ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
           version-major: ${{ inputs.releaseType == 'major' }}
           version-minor: ${{ inputs.releaseType == 'minor' }}
-          version-patch: ${{ inputs.releaseType == 'patch' }}
           release-branch-name: 'main'
           maven-args: "-Dmaven.javadoc.skip=true -Ddockerfile.skip -DdockerCompose.skip -Dmaven.deploy.skip=true"
