ci: try configuring the ssh agent instead of defining ssh-key on checkout

--- a/.github/workflows/stage.yml
+++ b/.github/workflows/stage.yml
@@ -24,8 +24,10 @@ jobs:
     steps:
       - name: Git Checkout
         uses: actions/checkout@v3
+
+      - uses: webfactory/ssh-agent@v0.5.4
         with:
-          ssh-key: "${{ secrets.SSH_PRIVATE_KEY }}"
+          ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
 
       - name: Set GitHub Actions as commit author
         shell: bash
