ci: set ssh agent - attempt to mitigate clone issue

--- a/.github/workflows/stage.yml
+++ b/.github/workflows/stage.yml
@@ -27,6 +27,12 @@ jobs:
         with:
           ssh-key: ${{ secrets.SSH_PRIVATE_KEY }}
 
+      - name: Set up SSH agent
+        uses: webfactory/ssh-agent@v0.5.4
+        with:
+          ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
+
+
       - name: Set GitHub Actions as commit author
         shell: bash
         run: |
