--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,9 +1,7 @@
 name: Publish release
 
 on:
-  push:
-    tags:        
-      - "v*.*.*"
+  workflow_dispatch:
 
 jobs:
   create-release:
@@ -14,7 +12,7 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Set up Java
-        uses: actions/setup-java@v2
+        uses: actions/setup-java@v3
         with:
           distribution: 'temurin'
           java-version: '11'
