--- a/.github/workflows/stage.yml
+++ b/.github/workflows/stage.yml
@@ -40,7 +40,7 @@ jobs:
           git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
 
       - name: Set up Java
-        uses: actions/setup-java@v2
+        uses: actions/setup-java@v3
         with:
           distribution: 'temurin'
           java-version: '11'
@@ -74,11 +74,22 @@ jobs:
         id: development_version
 
       - name: Reset to initial version
-        run: mvn versions:set -DnewVersion=\${{ steps.initial_version.outputs.version }}
+        run: mvn versions:set -DnewVersion=${{ steps.initial_version.outputs.version }}
 
       - name: Perform Maven Relese
         run: 
           mvn release:clean release:prepare release:perform 
-            -DreleaseVersion=\${{ steps.release_version.outputs.version }} 
-            -DdevelopmentVersion=\${{ steps.development_version.outputs.version }} 
+            -DreleaseVersion=${{ steps.release_version.outputs.version }} 
+            -DdevelopmentVersion=${{ steps.development_version.outputs.version }} 
             -Darguments="-Dmaven.javadoc.skip=true -Dmaven.deploy.skip=true"
+
+      - name: Trigger publish workflow
+        uses: actions/github-script@v6
+        with:
+          script: |
+            github.rest.actions.createWorkflowDispatch({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              workflow_id: 'publish.yml',
+              ref: v${{ steps.release_version.outputs.version }},
+            })
