--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -2,6 +2,11 @@ name: Publish release
 
 on:
   workflow_dispatch:
+    inputs:
+      tag_ref:
+        description: 'Tag ref to publish release for'
+        required: true
+        type: string
 
 jobs:
   create-release:
@@ -10,6 +15,11 @@ jobs:
     steps:
       - name: Git Checkout
         uses: actions/checkout@v3
+        with:
+          ref: 'main'
+
+      - name: Merge release tag to main branch
+        run: git merge ${{ inputs.tag_ref }}
 
       - name: Set up Java
         uses: actions/setup-java@v3
@@ -31,6 +41,6 @@ jobs:
         uses: softprops/action-gh-release@v1
         with: 
           tag_name: v${{ steps.get_version.outputs.version }}
-          name: Release version ${{ steps.get_version.outputs.version }}
+          name: v${{ steps.get_version.outputs.version }}
           body: "**Changes:**"
           files: ./target/*-${{ steps.get_version.outputs.version }}.jar
