--- a/.github/workflows/stage.yml
+++ b/.github/workflows/stage.yml
@@ -25,13 +25,13 @@ jobs:
       - name: Git Checkout
         uses: actions/checkout@v3
         with:
+          ref: 'develop' 
           ssh-key: ${{ secrets.SSH_PRIVATE_KEY }}
 
       - name: Set up SSH agent
         uses: webfactory/ssh-agent@v0.5.4
         with:
           ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
-
 
       - name: Set GitHub Actions as commit author
         shell: bash
