--- a/.github/workflows/stage-manual.yml
+++ b/.github/workflows/stage-manual.yml
@@ -14,7 +14,7 @@ on:
 
 jobs:
   perform-release:
-    if: ${{ github.ref !== 'main' }}
+    if: ${{ github.ref != 'main' }}
     runs-on: ubuntu-latest
 
     steps:
