--- a/.github/workflows/stage-manual.yml
+++ b/.github/workflows/stage-manual.yml
@@ -57,5 +57,6 @@ jobs:
               owner: context.repo.owner,
               repo: context.repo.repo,
               workflow_id: 'publish.yml',
-              ref: 'v${{ steps.release_version.outputs.version }}',
+              ref: 'v${{ inputs.releaseVersion }}',
+              inputs.tag_ref: 'v${{ inputs.releaseVersion }}',
             })
