--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -16,10 +16,12 @@ jobs:
       - name: Git Checkout
         uses: actions/checkout@v3
         with:
-          ref: 'main'
+          ref: ${{ inputs.tag_ref }}
 
       - name: Merge release tag to main branch
-        run: git merge ${{ inputs.tag_ref }}
+        run: |
+          git checkout main
+          git merge ${{ inputs.tag_ref }}
 
       - name: Set up Java
         uses: actions/setup-java@v3
