--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -20,6 +20,7 @@ jobs:
 
       - name: Merge release tag to main branch
         run: |
+          git fetch origin
           git checkout main
           git merge ${{ inputs.tag_ref }}
 
