--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -17,7 +17,9 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Merge release tag to main branch
-        run: git merge ${{ inputs.tag_ref }}
+        run: |
+          git merge ${{ inputs.tag_ref }}
+          git push
 
       - name: Set up Java
         uses: actions/setup-java@v3
