ci: try setting ref to main...

--- a/.github/workflows/stage-manual.yml
+++ b/.github/workflows/stage-manual.yml
@@ -57,7 +57,7 @@ jobs:
               owner: context.repo.owner,
               repo: context.repo.repo,
               workflow_id: 'publish.yml',
-              ref: 'v${{ inputs.releaseVersion }}',
+              ref: 'main',
               inputs: {
                 tag_ref: 'v${{ inputs.releaseVersion }}',
               },
