ci: try adding a fetch before merging tag

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -18,6 +18,7 @@ jobs:
 
       - name: Merge release tag to main branch
         run: |
+          git fetch
           git merge ${{ inputs.tag_ref }}
           git push
 
